Update info about projects part 2

--- a/index.html
+++ b/index.html
@@ -417,6 +417,236 @@
 
 <!-- Portfolio Modals -->
 
+<!-- Portfolio Modal 8 -->
+<div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog"
+     aria-labelledby="portfolioModal8Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+            </button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 font-italic">
+                            <!-- Portfolio Modal - Title -->
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 8</h2>
+                            <!-- Icon Divider -->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon">
+                                    <i class="fab fa-laravel"></i>
+                                </div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        This project is centered around creating an online platform catering to corporate clients globally,
+                                        facilitating the seamless purchase of flowers. Situated in the United Arab Emirates, the platform aims
+                                        to provide a convenient and efficient solution for businesses worldwide to access and acquire floral
+                                        arrangements for various corporate needs</div>
+                                <ul class="list-group list-group-item-info">
+                                    <table class="table table-bordered table-info">
+                                        <thead>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>Roles</td>
+                                            <td>Back-end developer</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Team</td>
+                                            <td>9 members (7 programmers, tech lead, project manager)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Technologies</td>
+                                            <td>Spring, Microservices, Hibernate, Git, JUnit, MongoDb, DynamoDb, MySQL, Stripe, AWS
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Skills</td>
+                                            <td>Write a module in a microservices architecture to integrate with the Odoo system using MongoDB,
+                                                AWS SQS, and AWS SNS
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Duration</td>
+                                            <td>4 months</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </ul>
+                            </div>
+                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                                <i class="far fa-times-circle"></i>
+                                Back
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Portfolio Modal 7 -->
+<div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog"
+     aria-labelledby="portfolioModal7Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+            </button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 font-italic">
+                            <!-- Portfolio Modal - Title -->
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 7</h2>
+                            <!-- Icon Divider -->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon">
+                                    <i class="fab fa-laravel"></i>
+                                </div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        This project aims to assess business risk and Business Interruption Value (BIV)
+                                        by incorporating key business parameters. Utilizing the NAICS code, the system
+                                        employs specific calculation logic and formulas to generate comprehensive reports,
+                                        offering valuable insights into risk evaluation for businesses</div>
+                                <ul class="list-group list-group-item-info">
+                                    <table class="table table-bordered table-info">
+                                        <thead>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>Roles</td>
+                                            <td>Back-end developer/Tech Lead/DevOps</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Team</td>
+                                            <td>4 members (2 programmers, 1 qa, 1 project manager)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Technologies</td>
+                                            <td>Spring, Hibernate, Git, JUnit, MySQL, MailJet, Stripe, AWS
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Skills</td>
+                                            <td>Designed a project from scratch, employing UML diagrams and database schemas.
+                                                Created APIs for calculating business parameters and converted large datasets
+                                                from Excel to store the necessary parameters for calculations in the database.
+                                                Established infrastructures in AWS from scratch, utilizing services such as EC2,
+                                                ASG, ELB, S3, ROUTE 53, CLOUD FRONT, BEANSTALK, VPC, and RDS
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Duration</td>
+                                            <td>12 months</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </ul>
+                            </div>
+                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                                <i class="far fa-times-circle"></i>
+                                Back
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Portfolio Modal 6 -->
+<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog"
+     aria-labelledby="portfolioModal6Label" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">
+            <i class="fas fa-times"></i>
+          </span>
+            </button>
+            <div class="modal-body text-center">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8 font-italic">
+                            <!-- Portfolio Modal - Title -->
+                            <h2 class="portfolio-modal-title text-secondary text-uppercase">Project 6</h2>
+                            <!-- Icon Divider -->
+                            <div class="divider-custom">
+                                <div class="divider-custom-line"></div>
+                                <div class="divider-custom-icon">
+                                    <i class="fab fa-laravel"></i>
+                                </div>
+                                <div class="divider-custom-line"></div>
+                            </div>
+                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        The project is a comprehensive platform designed to streamline the process of finding and managing cleaning services for flats/houses in England.
+                                        Users, both cleaners, and clients, can seamlessly connect through the platform, facilitating the creation and management of cleaning jobs.
+                                        The system incorporates a franchise model, allowing for scalability and regional expansion. An intuitive admin panel provides centralized control,
+                                        ensuring efficient oversight and management of the entire operation. Additionally, the implementation of mail notifications enhances communication,
+                                        keeping users informed and engaged throughout the cleaning service process</div>
+                                <ul class="list-group list-group-item-info">
+                                    <table class="table table-bordered table-info">
+                                        <thead>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td>Roles</td>
+                                            <td>Back-end developer/DevOps</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Team</td>
+                                            <td>6 members (4 programmers, 1 qa, 1 project manager)</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Technologies</td>
+                                            <td>Spring MVC, Spring, JPA, Hibernate, Git, JUnit, MySQL, MailJet, Gradle
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Skills</td>
+                                            <td>Rewrite the project from scratch, focusing on designing the architecture and hosting it.
+                                                The old system used Spring MVC with a React app embedded within.
+                                                The goal is to separate it into two distinct apps and develop a Spring REST API
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Duration</td>
+                                            <td>12 months</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </ul>
+                            </div>
+                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                                <i class="far fa-times-circle"></i>
+                                Back
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Portfolio Modal 5 -->
 <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog"
      aria-labelledby="portfolioModal5Label" aria-hidden="true">
@@ -532,13 +762,11 @@
                                         </tr>
                                         <tr>
                                             <td>Team</td>
-                                            <td>15 members (10 programmers, 2 qa, 1 ba, tech lead, project
-                                                manager)</td>
+                                            <td>15 members (10 programmers, 2 qa, 1 ba, tech lead, project manager)</td>
                                         </tr>
                                         <tr>
                                             <td>Technologies</td>
-                                            <td>Kotlin, Spring, JPA, Hibernate, Rabbit MQ, BitBucket, JUnit, MySQL,
-                                                Microservices, Jenkins, Sonar
+                                            <td>Kotlin, Spring, JPA, Hibernate, Rabbit MQ, BitBucket, JUnit, MySQL, Microservices, Jenkins, Sonar
                                             </td>
                                         </tr>
                                         <tr>
@@ -613,7 +841,7 @@
                                         <tr>
                                             <td>Technologies</td>
                                             <td>Spring, JPA, Hibernate, Rabbit MQ, Git, JUnit, MsSQL, Microservices,
-                                                Jenkins
+                                                Jenkins, AWS
                                             </td>
                                         </tr>
                                         <tr>
