--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                                         <tbody>
                                         <tr>
                                             <td>Roles</td>
-                                            <td>Java developer</td>
+                                            <td>Back-end developer</td>
                                         </tr>
                                         <tr>
                                             <td>Team</td>
@@ -758,7 +758,7 @@
                                         <tbody>
                                         <tr>
                                             <td>Roles</td>
-                                            <td>Java developer</td>
+                                            <td>Back-end developer</td>
                                         </tr>
                                         <tr>
                                             <td>Team</td>
@@ -832,7 +832,7 @@
                                         <tbody>
                                         <tr>
                                             <td>Roles</td>
-                                            <td>Java developer</td>
+                                            <td>Back-end developer</td>
                                         </tr>
                                         <tr>
                                             <td>Team</td>
@@ -908,7 +908,7 @@
                                         <tbody>
                                         <tr>
                                             <td>Roles</td>
-                                            <td>Java developer</td>
+                                            <td>Back-end developer</td>
                                         </tr>
                                         <tr>
                                             <td>Team</td>
@@ -986,7 +986,7 @@
                                         <tbody>
                                         <tr>
                                             <td>Roles</td>
-                                            <td>Java developer</td>
+                                            <td>Back-end developer</td>
                                         </tr>
                                         <tr>
                                             <td>Team</td>
