--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         This project is centered around creating an online platform catering to corporate clients globally,
@@ -516,7 +516,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         This project aims to assess business risk and Business Interruption Value (BIV)
@@ -594,7 +594,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         The project is a comprehensive platform designed to streamline the process of finding and managing cleaning services for flats/houses in England.
@@ -671,7 +671,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         The project focuses on optimizing the internal transportation of documents within a bank's offices.
@@ -744,7 +744,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         This project aims to enhance security by implementing robust measures such as
@@ -818,7 +818,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         The Freight Hub in Estonia is a cutting-edge project designed to enhance
@@ -894,7 +894,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         The social aggregator project for condominiums in Dania integrates chats, posts,
@@ -970,7 +970,7 @@
                                 </div>
                                 <div class="divider-custom-line"></div>
                             </div>
-                            <div class="card text-white bg-info mb-3 mb-1 text-left">
+                            <div class="card text-white bg-info mb-3 text-left">
                                 <div class="card-body">
                                     <p class="card-text">
                                         The project involves building a secure cryptocurrency wallet risk assessment
