Add languages, hobbies

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                     <p id="experience-text" class="font-italic about-info"></p>
                 </div>
                 </p>
-                <p class="font-weight-bold mb-2 h2 ">My technical skills:</p>
-                <p/>
+                <p class="font-weight-bold mb-2 h2">My technical skills:</p>
                 <p class="fade-in about-info" id="item1"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
                     Backend:</strong> Java, Spring (Core, Boot, MVC, Data, Security, Cloud)</p>
                 <p class="fade-in about-info" id="item2"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
@@ -106,14 +105,21 @@
                 <p class="fade-in about-info" id="item5"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
                     Software Architectures & DevOps:</strong> REST, deploying infrastructure in AWS, Microservices
                     (message queuing, API gateway, service discovery, load balancing, centralized configurations,
-                    tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes(K8s), Docker Compose,
+                    tracing and logging, containerization), RabbitMQ, Kafka, Docker, Kubernetes (K8s), Docker Compose,
                     CI/CD (Jenkins)</p>
                 <p class="fade-in about-info" id="item6"><strong> <i class="fas fa-circle-notch fa-spin text-info"></i>
                     Version control:</strong> GitHub, Bitbucket</p>
                 <p class="fade-in about-info" id="item7"><strong>
                     <i class="fas fa-award text-warning"></i>
                     AWS certified</strong></p>
-                </p>
+                <p class="fade-in font-weight-bold mb-2 h2" id="item8">Languages:</p>
+                <p class="fade-in about-info" id="item9"> <i class="fa-solid fa-play text-info"></i> English - B2</p>
+                <p class="fade-in about-info" id="item10"> <i class="fa-solid fa-play text-info"></i> Polish - B2</p>
+                <p class="fade-in about-info" id="item11"> <i class="fa-solid fa-play text-info"></i> Russian - native speaker</p>
+                <p class="fade-in about-info" id="item12"> <i class="fa-solid fa-play text-info"></i> Belarusian - native speaker</p>
+                <p class="fade-in font-weight-bold mb-2 h2" id="item13">Hobbies:</p>
+                <p class="fade-in about-info" id="item14"> <i class="fa-solid fa-plug text-info"></i> I love an active lifestyle (skiing, hiking, swimming, basketball, traveling)</p>
+                <p class="fade-in about-info" id="item15"> <i class="fa-solid fa-plug text-info"></i> I am passionate about cars and technology</p>
             </div>
         </div>
     </div>
