Update Contact part

--- a/index.html
+++ b/index.html
@@ -377,23 +377,33 @@
 
         <!-- Contact Section Form -->
         <div class="row">
-            <div class="col-lg-3 ml-auto mt-2 text-center">
-                <a class="btn btn-outline-info btn-xl" href="https://www.linkedin.com/in/vitold-radkevich/">
+            <div class="col-lg text-center">
+                <p> <a class="contact-me-btn glowing-text" href="https://www.linkedin.com/in/vitold-radkevich/">
                     <i class="fab fa-linkedin"></i> Linkedin</a>
+                </p>
             </div>
-            <div class="col-lg-3 mr-auto mt-2 text-center">
-                <a class="btn btn-outline-info btn-xl" href="mailto:radkevichvit@gmail.com">
+            <div class="col-lg text-center">
+                <p> <a class="contact-me-btn glowing-text" href="mailto:radkevichvit@gmail.com">
                     <i class="fab fa-google"></i> Mail</a>
+                </p>
             </div>
 
-            <div class="col-lg-2 mr-auto mt-2 text-center">
-                <a class="btn btn-outline-info btn-xl" href="CV/Radkevich-CV-2021.pdf">
+            <div class="col-lg text-center">
+                <p> <a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
                     <i class="far fa-file-word"></i> My CV</a>
+                </p>
             </div>
 
-            <div class="col-lg-2 mr-auto mt-2 mb-2 text-center">
-                <a class="btn btn-outline-info btn-xl" href="tel:+48571091688">
+            <div class="col-lg text-center">
+                <p> <a class="contact-me-btn glowing-text" href="CV/Radkevich-CV-2021.pdf">
+                    <i class="far fa-file-word"></i> CV Projects</a>
+                </p>
+            </div>
+
+            <div class="col-lg text-center">
+                <p> <a class="contact-me-btn glowing-text" href="tel:+48571091688">
                     <i class="fas fa-mobile-alt"></i> Call me</a>
+                </p>
             </div>
         </div>
     </div>
