Update Back button in Projects

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
 <!-- Copyright Section -->
 <section class="copyright py-4 text-center text-white">
-    <div class="container">
+    <div class="container font-italic">
         <small>Copyright &copy; Vitold Radkevich 2019</small>
     </div>
 </section>
@@ -496,7 +496,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
@@ -574,7 +574,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
@@ -651,7 +651,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
@@ -724,7 +724,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
@@ -798,7 +798,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
@@ -874,7 +874,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
@@ -950,7 +950,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
@@ -1026,7 +1026,7 @@
                                     </table>
                                 </ul>
                             </div>
-                            <button class="btn btn-outline-danger" href="#" data-dismiss="modal">
+                            <button class="btn btn-dark glowing-text-back-button btn-lg" href="#" data-dismiss="modal">
                                 <i class="far fa-times-circle"></i>
                                 Back
                             </button>
