Update X button in Projects

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <p class="fade-in about-info" id="item11"> <i class="fa-solid fa-play text-info"></i> Russian - native speaker</p>
                 <p class="fade-in about-info" id="item12"> <i class="fa-solid fa-play text-info"></i> Belarusian - native speaker</p>
                 <p class="fade-in font-weight-bold mb-2 h2" id="item13">Hobbies:</p>
-                <p class="fade-in about-info" id="item14"> <i class="fa-solid fa-plug text-info"></i> I love an active lifestyle (skiing, hiking, swimming, basketball, traveling)</p>
+                <p class="fade-in about-info" id="item14"> <i class="fa-solid fa-plug text-info"></i> I love an active lifestyle (skiing, hiking, swimming, cycling, basketball, traveling)</p>
                 <p class="fade-in about-info" id="item15"> <i class="fa-solid fa-plug text-info"></i> I am passionate about cars and technology</p>
             </div>
         </div>
@@ -440,7 +440,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+           <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
@@ -515,7 +515,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+           <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
@@ -593,7 +593,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+           <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
@@ -670,7 +670,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+          <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
@@ -743,7 +743,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+          <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
@@ -817,7 +817,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+          <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
@@ -893,7 +893,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+           <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
@@ -969,7 +969,7 @@
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">
-            <i class="fas fa-times"></i>
+          <i class="fa-solid fa-xmark"></i>
           </span>
             </button>
             <div class="modal-body text-center">
