--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/cloud_partitioner.png" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/cloud_partitioner.png" alt="">
                 </div>
             </div>
             <!-- Certification Item 11-->
@@ -153,7 +153,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/linux.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/linux.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 9-->
@@ -161,7 +161,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/9.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/9.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 8-->
@@ -169,7 +169,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/8.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/8.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 7-->
@@ -177,7 +177,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/7.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/7.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 6-->
@@ -185,7 +185,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/6.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/6.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 5-->
@@ -193,7 +193,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/5.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/5.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 4-->
@@ -201,7 +201,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/4.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/4.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 3-->
@@ -209,7 +209,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/3.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/3.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 2-->
@@ -217,7 +217,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/2.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/2.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 1-->
@@ -225,7 +225,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/1.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/1.jpg" alt="">
                 </div>
             </div>
             <!-- Certification Item 10-->
@@ -233,7 +233,7 @@
                 <div class="mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                     </div>
-                    <img class="img-fluid" src="img/certificates/10.jpg" alt="">
+                    <img class="img-fluid img-cert" src="img/certificates/10.jpg" alt="">
                 </div>
             </div>
 
