--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
                                                      href="#portfolio">Projects</a></li>
                 <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                                                     href="#contact">Contacts</a></li>
+                                                     href="#contact">Contact me</a></li>
             </ul>
         </div>
     </div>
